feat: api geet order by user id

--- a/backend/public/docs/api-docs.yaml
+++ b/backend/public/docs/api-docs.yaml
@@ -37,3 +37,6 @@ paths:
 
   /api/orders/{id}:
     $ref: './order.yaml#/Order_id'
+  
+  /api/orders/{user_id}:
+    $ref: './order.yaml#/Order_user_id'
