fix: comment unnecessary api

--- a/backend/public/docs/api-docs.yaml
+++ b/backend/public/docs/api-docs.yaml
@@ -32,20 +32,20 @@ paths:
   /api/themes/{id}:
     $ref: './theme.yaml#/Theme_id'
   
-  /api/orders:
-    $ref: './order.yaml#/Orders'
+  # /api/orders:
+  #   $ref: './order.yaml#/Orders'
 
-  /api/orders/{id}:
-    $ref: './order.yaml#/Order_id'
+  # /api/orders/{id}:
+  #   $ref: './order.yaml#/Order_id'
   
   /api/orders/{user_id}:
     $ref: './order.yaml#/Order_user_id'
   
-  /api/weddings:
-    $ref: './wedding.yaml#/Weddings'
+  # /api/weddings:
+  #   $ref: './wedding.yaml#/Weddings'
 
-  /api/weddings/{id}:
-    $ref: './wedding.yaml#/Wedding_id'
+  # /api/weddings/{id}:
+  #   $ref: './wedding.yaml#/Wedding_id'
   
   /api/weddings/{order_id}:
     $ref: './wedding.yaml#/Wedding_OrderID'
