--- a/backend/public/docs/order.yaml
+++ b/backend/public/docs/order.yaml
@@ -213,7 +213,7 @@ Order_id:
       '404':
         description: Order not found
 
-Order_user_id:
+OrderUser_UserID:
   get:
     tags:
       - Order
@@ -237,25 +237,50 @@ Order_user_id:
               message: Orders retrieved successfully
               data:
                 orders:
-                  - id: 1
-                    status: "PAID"
-                    user_id: 1
+                  - id: 9a736a80-8a3d-4ff9-ac3b-9a6a40b8f93a
+                    status: PAID
+                    user_id: 5
+                    package_id: 3
+                    theme_id: 3
+                    created_by: null
+                    updated_by: null
+                    deleted_by: null
+                    created_at: "2023-10-25T03:36:25.000000Z"
+                    updated_at: "2023-10-25T03:36:25.000000Z"
+                    deleted_at: null
+                    invitation:
+                      id: 46
+                      status: ACTIVE
+                      slug: admin-istratorVA9NBYed9r2UtlEC
+                      is_custom_domain: 0
+                      custom_domain: null
+                      user_id: 2
+                      order_id: 9a736a80-8a3d-4ff9-ac3b-9a6a40b8f93a
+                      invitation_type_id: 1
+                      created_at: "2023-10-25T03:36:29.000000Z"
+                      updated_at: "2023-10-25T03:36:29.000000Z"
+                      deleted_at: null
+                  - id: 9a736a80-b57a-453e-9346-b5824d79c514
+                    status: UNPAID
+                    user_id: 5
                     package_id: 1
                     theme_id: 1
                     created_by: null
                     updated_by: null
                     deleted_by: null
-                    created_at: "2023-10-25T00:00:00.000000Z"
-                    updated_at: "2023-10-25T00:00:00.000000Z"
+                    created_at: "2023-10-25T03:36:25.000000Z"
+                    updated_at: "2023-10-25T03:36:25.000000Z"
                     deleted_at: null
-                  - id: 2
-                    status: "UNPAID"
-                    user_id: 2
-                    package_id: 2
-                    theme_id: 2
-                    created_by: null
-                    updated_by: null
-                    deleted_by: null
-                    created_at: "2023-10-25T00:00:00.000000Z"
-                    updated_at: "2023-10-25T00:00:00.000000Z"
-                    deleted_at: null
+                    invitation:
+                      id: 49
+                      status: ACTIVE
+                      slug: executive-user9Ia0x2Gkvsckal8c
+                      is_custom_domain: 0
+                      custom_domain: null
+                      user_id: 4
+                      order_id: 9a736a80-b57a-453e-9346-b5824d79c514
+                      invitation_type_id: 1
+                      created_at: "2023-10-25T03:36:29.000000Z"
+                      updated_at: "2023-10-25T03:36:29.000000Z"
+                      deleted_at: null
+
