--- a/backend/public/docs/wedding.yaml
+++ b/backend/public/docs/wedding.yaml
@@ -241,36 +241,223 @@ WeddingOrder_OrderID:
                   invitation:
                     id: 1
                     status: ACTIVE
-                    slug: admin-istratorayHHTGluUSDqCEMy
+                    slug: ContohSlug9a736a7e-976c-4781-97ad-1895d5f9a7ad
                     is_custom_domain: 0
                     custom_domain: null
                     user_id: 2
                     order_id: '9a736a7e-976c-4781-97ad-1895d5f9a7ad'
                     invitation_type_id: 1
                     created_at: '2023-10-25T03:36:28.000000Z'
-                    updated_at: '2023-10-25T03:36:28.000000Z'
+                    updated_at: '2023-11-01T07:44:29.000000Z'
                     deleted_at: null
                     wedding:
                       id: 1
-                      title: Quam earum
-                      location: '92152 Cassin Springs\nEast Chloeland, KY 42692-9078'
-                      location_gmap: null
-                      rekening_gift: null
+                      title: Judul Wedding
+                      location: Lokasi Wedding
+                      location_gmap: Lokasi Google Maps
+                      rekening_gift: Nomor Rekening Gift
                       created_by: null
                       updated_by: null
                       deleted_by: null
                       invitation_id: 1
                       created_at: '2023-10-25T03:36:34.000000Z'
-                      updated_at: '2023-10-25T03:36:34.000000Z'
+                      updated_at: '2023-11-01T07:44:29.000000Z'
                       deleted_at: null
+                      groom:
+                        id: 1
+                        name: Nama Groom
+                        father: Ayah Groom
+                        mother: Ibu Groom
+                        address: Alamat Groom
+                        instagram: Instagram Groom
+                        image: URL Gambar Groom
+                        wedding_id: 1
+                        created_at: '2023-10-25T03:36:35.000000Z'
+                        updated_at: '2023-11-01T07:44:29.000000Z'
+                        deleted_at: null
+                      bride:
+                        id: 1
+                        name: Nama Bride
+                        father: Ayah Bride
+                        mother: Ibu Bride
+                        address: Alamat Bride
+                        instagram: Instagram Bride
+                        image: URL Gambar Bride
+                        wedding_id: 1
+                        created_at: '2023-10-25T03:36:36.000000Z'
+                        updated_at: '2023-11-01T07:44:29.000000Z'
+                        deleted_at: null
+                      wish:
+                        - id: 1
+                          name: Nicole Stiedemann
+                          from: Aut asperiores
+                          wish: Beatae consequatur esse consequatur dolorem itaque. Minima omnis aperiam mollitia ex voluptatem optio. Occaecati fugiat aut voluptatem porro tenetur fugiat rem.
+                          wedding_id: 1
+                          created_at: '2023-10-25T03:36:37.000000Z'
+                          updated_at: '2023-10-25T03:36:37.000000Z'
+                          deleted_at: null
+                        - id: 2
+                          name: Miss Angie Moen III
+                          from: Corrupti nemo
+                          wish: Excepturi reiciendis impedit eos dolor dolor optio tempore sequi. Sunt amet ab totam commodi mollitia rem et est. Ratione modi quos aspernatur voluptatibus possimus cupiditate voluptatem.
+                          wedding_id: 1
+                          created_at: '2023-10-25T03:36:37.000000Z'
+                          updated_at: '2023-10-25T03:36:37.000000Z'
+                          deleted_at: null
+                        - id: 3
+                          name: Prof. Angus Monahan
+                          from: Praesentium
+                          wish: Rerum repellat autem sunt consequatur aperiam ab nulla corrupti. Aut voluptatem reprehenderit et praesentium aperiam dolorem. Quibusdam dolores tenetur ut molestiae sequi.
+                          wedding_id: 1
+                          created_at: '2023-10-25T03:36:37.000000Z'
+                          updated_at: '2023-10-25T03:36:37.000000Z'
+                          deleted_at: null
+                        - id: 4
+                          name: Mercedes McDermott
+                          from: Eius ipsa unde
+                          wish: In consectetur eos beatae unde et voluptatem et vel. Facilis voluptatem dolorem et saepe exercitationem esse quis. Blanditiis dolores molestiae iste distinctio ut blanditiis eos. Nam animi perferendis debitis voluptatem.
+                          wedding_id: 1
+                          created_at: '2023-10-25T03:36:37.000000Z'
+                          updated_at: '2023-10-25T03:36:37.000000Z'
+                          deleted_at: null
+                        - id: 5
+                          name: Dortha Blick
+                          from: In
+                          wish: Ea nesciunt debitis unde fugiat. Repudiandae velit provident ducimus enim occaecati debitis sapiente. Rerum nihil et nesciunt natus sunt et similique. Occaecati occaecati illo voluptatem ut ducimus. Consequatur possimus nostrum expedita atque.
+                          wedding_id: 1
+                          created_at: '2023-10-25T03:36:37.000000Z'
+                          updated_at: '2023-10-25T03:36:37.000000Z'
+                          deleted_at: null
+                      gift:
+                        - id: 1
+                          name: Miss Brianne Deckow
+                          from: Ducimus est
+                          nominal: 61236
+                          wedding_id: 1
+                          created_at: '2023-10-25T03:36:42.000000Z'
+                          updated_at: '2023-10-25T03:36:42.000000Z'
+                          deleted_at: null
+                        - id: 2
+                          name: Prof. Pedro Toy MD
+                          from: Est reiciendis
+                          nominal: 433090
+                          wedding_id: 1
+                          created_at: '2023-10-25T03:36:42.000000Z'
+                          updated_at: '2023-10-25T03:36:42.000000Z'
+                          deleted_at: null
+                        - id: 3
+                          name: Kenny Lehner V
+                          from: Nam omnis modi
+                          nominal: 411168
+                          wedding_id: 1
+                          created_at: '2023-10-25T03:36:42.000000Z'
+                          updated_at: '2023-10-25T03:36:42.000000Z'
+                          deleted_at: null
+                        - id: 4
+                          name: Savanah Hill
+                          from: Dolorum
+                          nominal: 146843
+                          wedding_id: 1
+                          created_at: '2023-10-25T03:36:42.000000Z'
+                          updated_at: '2023-10-25T03:36:42.000000Z'
+                          deleted_at: null
+                        - id: 5
+                          name: Mr. Neal Cremin
+                          from: Doloribus id
+                          nominal: 143880
+                          wedding_id: 1
+                          created_at: '2023-10-25T03:36:42.000000Z'
+                          updated_at: '2023-10-25T03:36:42.000000Z'
+                          deleted_at: null
+                      event:
+                        - id: 1
+                          name: Akad Nikah
+                          date: '2023-12-01 14:00:00'
+                          start_time: '14:00:00'
+                          end_time: '16:00:00'
+                          place: Tempat Akad
+                          wedding_id: 1
+                          created_at: '2023-10-25T03:36:47.000000Z'
+                          updated_at: '2023-11-01T07:44:29.000000Z'
+                          deleted_at: null
+                        - id: 2
+                          name: Resepsi
+                          date: '2023-12-02 18:00:00'
+                          start_time: '18:00:00'
+                          end_time: '22:00:00'
+                          place: Tempat Resepsi
+                          wedding_id: 1
+                          created_at: '2023-10-25T03:36:47.000000Z'
+                          updated_at: '2023-11-01T07:44:29.000000Z'
+                          deleted_at: null
+                        - id: 3
+                          name: Unduh Mantu
+                          date: '2023-12-03 12:00:00'
+                          start_time: '12:00:00'
+                          end_time: '15:00:00'
+                          place: Tempat Unduh Mantu
+                          wedding_id: 1
+                          created_at: '2023-10-25T03:36:47.000000Z'
+                          updated_at: '2023-11-01T07:44:29.000000Z'
+                          deleted_at: null
+                      love_story:
+                        - id: 283
+                          year: Tahun 1 UPDATE LAGI
+                          story: Story tahun 1 UPDATE
+                          image: love_story_image1 UPDATE
+                          wedding_id: 1
+                          created_at: '2023-11-01T07:44:29.000000Z'
+                          updated_at: '2023-11-01T08:23:44.000000Z'
+                          deleted_at: null
+                        - id: 284
+                          year: Tahun 2 UPDATE LAGI
+                          story: Story tahun 2
+                          image: love_story_image2 UPDATE
+                          wedding_id: 1
+                          created_at: '2023-11-01T07:44:29.000000Z'
+                          updated_at: '2023-11-01T08:25:11.000000Z'
+                          deleted_at: null
+                      gallery:
+                        - id: 1
+                          file: URLGambarGaleri1
+                          type: null
+                          wedding_id: 1
+                          created_at: '2023-10-25T03:36:54.000000Z'
+                          updated_at: '2023-10-31T14:35:04.000000Z'
+                          deleted_at: null
+                        - id: 2
+                          file: URLGambarGaleri2
+                          type: null
+                          wedding_id: 1
+                          created_at: '2023-10-25T03:36:54.000000Z'
+                          updated_at: '2023-10-31T14:35:04.000000Z'
+                          deleted_at: null
+                        - id: 3
+                          file: URLGambarGaleri3
+                          type: null
+                          wedding_id: 1
+                          created_at: '2023-10-25T03:36:54.000000Z'
+                          updated_at: '2023-10-31T14:35:04.000000Z'
+                          deleted_at: null
+                        - id: 4
+                          file: URLGambarGaleri4
+                          type: null
+                          wedding_id: 1
+                          created_at: '2023-10-25T03:36:54.000000Z'
+                          updated_at: '2023-10-31T14:35:04.000000Z'
+                          deleted_at: null
+                        - id: 5
+                          file: URLGambarGaleri5
+                          type: null
+                          wedding_id: 1
+                          created_at: '2023-10-25T03:36:54.000000Z'
+                          updated_at: '2023-10-31T14:35:04.000000Z'
+                          deleted_at: null
                 guests:
                   - id: 20
                     name: Mr. Reggie Auer
                     description: Eveniet in qui ipsam
-                    address: >-
-                      Aliquid dolores suscipit dolores tenetur nihil. Doloremque vel
-                      necessitatibus iusto qui. At vitae exercitationem harum et dolorem
-                      enim. Aut error nobis voluptatum et maxime fugiat numquam dolor.
+                    address: Aliquid dolores suscipit dolores tenetur nihil. Doloremque vel necessitatibus iusto qui. At vitae exercitationem harum et dolorem enim. Aut error nobis voluptatum et maxime fugiat numquam dolor.
                     is_invited: 1
                     no_whats_app: '+18503494834'
                     email: nwalsh@vandervort.com
@@ -281,6 +468,178 @@ WeddingOrder_OrderID:
                     created_at: '2023-10-25T03:36:30.000000Z'
                     updated_at: '2023-10-25T03:36:30.000000Z'
                     deleted_at: null
-                guests_count: 1
+              guests_count: 1
       '404':
         description: Wedding not found
+  
+  post:
+    tags:
+      - Wedding
+    summary: Update wedding by Order ID
+    security:
+      - BearerAuth: []
+    parameters:
+      - name: order_id
+        in: path
+        required: true
+        schema:
+          type: string
+    requestBody:
+      required: true
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              slug:
+                type: string
+                example: ContohSlug
+              title:
+                type: string
+                example: Judul Wedding
+              location:
+                type: string
+                example: Lokasi Wedding
+              location_gmap:
+                type: string
+                example: Lokasi Google Maps
+              rekening_gift:
+                type: string
+                example: Nomor Rekening Gift
+              groom_name:
+                type: string
+                example: Nama Groom
+              groom_father:
+                type: string
+                example: Ayah Groom
+              groom_mother:
+                type: string
+                example: Ibu Groom
+              groom_address:
+                type: string
+                example: Alamat Groom
+              groom_instagram:
+                type: string
+                example: Instagram Groom
+              groom_image:
+                type: string
+                example: URL Gambar Groom
+              bride_name:
+                type: string
+                example: Nama Bride
+              bride_father:
+                type: string
+                example: Ayah Bride
+              bride_mother:
+                type: string
+                example: Ibu Bride
+              bride_address:
+                type: string
+                example: Alamat Bride
+              bride_instagram:
+                type: string
+                example: Instagram Bride
+              bride_image:
+                type: string
+                example: URL Gambar Bride
+              date_akad:
+                type: string
+                format: date-time
+                example: 2023/12/01 14:00:00
+              start_time_akad:
+                type: string
+                example: 14:00:00
+              end_time_akad:
+                type: string
+                example: 16:00:00
+              place_akad:
+                type: string
+                example: Tempat Akad
+              date_resepsi:
+                type: string
+                format: date-time
+                example: 2023/12/02 18:00:00
+              start_time_resepsi:
+                type: string
+                example: 18:00:00
+              end_time_resepsi:
+                type: string
+                example: 22:00:00
+              place_resepsi:
+                type: string
+                example: Tempat Resepsi
+              date_unduh_mantu:
+                type: string
+                format: date-time
+                example: 2023/12/03 12:00:00
+              start_time_unduh_mantu:
+                type: string
+                example: 12:00:00
+              end_time_unduh_mantu:
+                type: string
+                example: 15:00:00
+              place_unduh_mantu:
+                type: string
+                example: Tempat Unduh Mantu
+              love_stories:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    year:
+                      type: string
+                    story:
+                      type: string
+                    image:
+                      type: string
+                example:
+                  - year: Tahun 1
+                    story: Story tahun 1
+                    image: love_story_image1
+                  - year: Tahun 2
+                    story: Story tahun 2
+                    image: love_story_image2
+                  - year: Tahun 3
+                    story: Story tahun 3
+                    image: love_story_image3
+              galleries:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    file:
+                      type: string
+                example:
+                  - file: URLImageGallery1
+                  - file: URLImageGallery2
+                  - file: URLImageGallery3
+    responses:
+      '200':
+        description: Wedding updated successfully
+        content:
+          application/json:
+            example:
+              success: true
+              errors: []
+              message: Wedding updated successfully
+              data:
+                wedding:
+                  id: 1
+                  title: "Updated Wedding Title"
+                  location: "Updated Wedding Location"
+                  location_gmap: "Updated GMap Location"
+                  rekening_gift: "Updated Rekening Gift"
+                  created_by: null
+                  updated_by: null
+                  deleted_by: null
+                  invitation_id: 1
+                  created_at: "2023-10-25T03:55:11.000000Z"
+                  updated_at: "2023-10-25T04:36:33.000000Z"
+                  deleted_at: null
+      '404':
+        description: Wedding not found
+      '422':
+        description: Validation error
+      '500':
+        description: Failed to update the wedding
+
