--- a/backend/public/docs/api-docs.yaml
+++ b/backend/public/docs/api-docs.yaml
@@ -32,8 +32,8 @@ paths:
   /api/themes/{id}:
     $ref: './theme.yaml#/Theme_id'
   
-  /api/orders:
-    $ref: './order.yaml#/Orders'
+  # /api/orders:
+  #   $ref: './order.yaml#/Orders'
 
   /api/orders/{id}:
     $ref: './order.yaml#/Order_id'
