--- a/backend/public/docs/order.yaml
+++ b/backend/public/docs/order.yaml
@@ -110,12 +110,14 @@ Order_id:
     tags:
       - Order
     summary: Get an order by ID
+    security:
+      - BearerAuth: []
     parameters:
       - name: id
         in: path
         required: true
         schema:
-          type: integer
+          type: string
     responses:
       '201':
         description: Order created successfully
@@ -143,75 +145,75 @@ Order_id:
                 payment_midtrans: bf26f202-0927-4a0b-be8d-5d091630aabd  
       '404':
         description: Order not found
-  put:
-    tags:
-      - Order
-    summary: Update an order by ID
-    security:
-      - BearerAuth: []
-    parameters:
-      - name: id
-        in: path
-        required: true
-        schema:
-          type: integer
-    requestBody:
-      required: true
-      content:
-        application/json:
-          example:
-            status: "PAID"
-            user_id: 1
-            package_id: 1
-            theme_id: 1
-    responses:
-      '200':
-        description: Order updated successfully
-        content:
-          application/json:
-            example:
-              success: true
-              errors: []
-              message: Order updated successfully
-              data:
-                order:
-                  id: 1
-                  status: "PAID"
-                  user_id: 1
-                  package_id: 1
-                  theme_id: 1
-                  created_by: null
-                  updated_by: null
-                  deleted_by: null
-                  created_at: "2023-10-25T00:00:00.000000Z"
-                  updated_at: "2023-10-25T00:00:00.000000Z"
-                  deleted_at: null
-      '404':
-        description: Order not found
-  delete:
-    tags:
-      - Order
-    summary: Delete an order by ID
-    security:
-      - BearerAuth: []
-    parameters:
-      - name: id
-        in: path
-        required: true
-        schema:
-          type: integer
-    responses:
-      '200':
-        description: Order deleted successfully
-        content:
-          application/json:
-            example:
-              success: true
-              errors: []
-              message: Order deleted successfully
-              data: null
-      '404':
-        description: Order not found
+  # put:
+  #   tags:
+  #     - Order
+  #   summary: Update an order by ID
+  #   security:
+  #     - BearerAuth: []
+  #   parameters:
+  #     - name: id
+  #       in: path
+  #       required: true
+  #       schema:
+  #         type: integer
+  #   requestBody:
+  #     required: true
+  #     content:
+  #       application/json:
+  #         example:
+  #           status: "PAID"
+  #           user_id: 1
+  #           package_id: 1
+  #           theme_id: 1
+  #   responses:
+  #     '200':
+  #       description: Order updated successfully
+  #       content:
+  #         application/json:
+  #           example:
+  #             success: true
+  #             errors: []
+  #             message: Order updated successfully
+  #             data:
+  #               order:
+  #                 id: 1
+  #                 status: "PAID"
+  #                 user_id: 1
+  #                 package_id: 1
+  #                 theme_id: 1
+  #                 created_by: null
+  #                 updated_by: null
+  #                 deleted_by: null
+  #                 created_at: "2023-10-25T00:00:00.000000Z"
+  #                 updated_at: "2023-10-25T00:00:00.000000Z"
+  #                 deleted_at: null
+  #     '404':
+  #       description: Order not found
+  # delete:
+  #   tags:
+  #     - Order
+  #   summary: Delete an order by ID
+  #   security:
+  #     - BearerAuth: []
+  #   parameters:
+  #     - name: id
+  #       in: path
+  #       required: true
+  #       schema:
+  #         type: integer
+  #   responses:
+  #     '200':
+  #       description: Order deleted successfully
+  #       content:
+  #         application/json:
+  #           example:
+  #             success: true
+  #             errors: []
+  #             message: Order deleted successfully
+  #             data: null
+  #     '404':
+  #       description: Order not found
 
 OrderUser_UserID:
   get:
