fix: swagger edit example login

--- a/backend/public/docs/auth.yaml
+++ b/backend/public/docs/auth.yaml
@@ -80,11 +80,11 @@ Login:
               email:
                 type: string
                 format: email
-                example: user@example.com
+                example: user@user.com
               password:
                 type: string
                 format: password
-                example: password123
+                example: secret
     responses:
       '200':
         description: Login berhasil
