--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
-        "alpinejs": "^3.13.0"
+        "@splidejs/splide": "^4.1.4",
+        "alpinejs": "^3.13.0",
+        "flowbite": "^2.0.0"
     }
 }
