feat: api social login

--- a/backend/public/docs/api-docs.yaml
+++ b/backend/public/docs/api-docs.yaml
@@ -30,6 +30,9 @@ paths:
 
   /api/logout:
     $ref: './auth.yaml#/Logout'
+  
+  /api/social-login/{provider}:
+    $ref: './auth.yaml#/SocialLogin'
 
   /api/packages:
     $ref: './package.yaml#/Packages'
